Endret maks størrelse på opplastet fil til 50MB, Maks størrelse på et vedlegg til 50MB og maks størrelse på alle vedlegg til 150MB. Flyttet kall til storeVedleggThatAreNotInFilestorage til sendInn metode. Endret logging for å måle tider.